# Translation-tool

./: .gitignore  README.md  gui.py  image_manipulation.py  index.html  main.py  options.json  pyproject.toml  settings.json  test.py  test.sh  translations.py
flaskr/templates/: index.html
helper/: img.py  json_actions.py
helpers/: img.py
ocr/: img_rec.py  preprocessing.py
setup/: installer-windows.py
translation/: translation.py
