[project]
name = "translation-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "deep-translator>=1.11.4",
    "ollama>=0.5.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pytesseract>=0.3.13",
    "textblob>=0.19.0",
]
